Add donation request API
